--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
   height: 2053px;
   background: url("../images/v1_4.png");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position:center center;
   background-size: cover;
   opacity: 1;
   position: relative;
@@ -70,21 +70,21 @@ body {
   border: 3.738236427307129px solid rgba(0,0,0,1);
 }
 .v117_17 {
-  width: 330px;
-  height: 115px;
+  width: 8000px;
+  height: 2000px;
   background: url("../images/v117_17.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 181px;
-  left: 50px;
+  top: 300px;
+  left: 100px;
   overflow: hidden;
 }
 .v56_6 {
-  width: 330px;
-  height: 115px;
+  width: 780px;
+  height: 200px;
   background: rgba(0,0,0,0.5);
   opacity: 1;
   position: relative;
@@ -101,37 +101,38 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 46px;
-  left: 15px;
+  left: 250px;
   font-family: Poppins;
   font-weight: ExtraBold;
-  font-size: 21px;
+  font-size: 40px;
   opacity: 1;
   text-align: center;
 }
 .v207_964 {
-  width: 330px;
-  height: 39px;
+  width: 5000px;
+  height: 200px;
   background: url("../images/v207_964.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   opacity: 1;
-  position: absolute;
+  position:relative;
   top: 78px;
   left: 50px;
+  margin: auto;
   overflow: hidden;
 }
 .v1_6 {
-  width: 115px;
-  height: 39px;
+  width: 400px;
+  height: 150px;
   background: url("../images/v1_6.png");
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: cover;
+  background-size: contain;
   opacity: 0.8999999761581421;
   position:relative;
   top: 0px;
-  left: 100px;
+  left:250px;
   overflow: hidden;
 }
 .v117_19 {
