--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
 }
 .v1_4 {
   width:auto;
-  height: 2053px;
+  height: 2200px;
   background: url("../images/v1_4.png");
   background-repeat: no-repeat;
   background-position:center center;
@@ -162,7 +162,7 @@ body {
 }
 .v207_966 {
   width: 3300px;
-  height: 1510px;
+  height: 170px;
   background: url("../images/v207_966.png");
   background-repeat: no-repeat;
   background-position: center center;
@@ -170,7 +170,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 730px;
-  left: 120px;
+  left: 130px;
   overflow: hidden;
 }
 .v117_16 {
@@ -306,14 +306,14 @@ body {
   text-align: center;
 }
 .v122_142 {
-  width: 11px;
-  height: 11px;
-  background: url("../images/v122_142.png");
+  width: 60px;
+  height: 60px;
+  background: url("../images/arrow.png");
   opacity: 1;
+  background-repeat: no-repeat;
   position: absolute;
-  top: 12px;
+  top: 10px;
   left: 91px;
-  border: 2px solid rgba(255,255,255,1);
 }
 .v192_130 {
   width: 131px;
@@ -368,18 +368,18 @@ body {
   text-align: center;
 }
 .v151_9 {
-  width: 11px;
-  height: 11px;
-  background: url("../images/v151_9.png");
+  width: 60px;
+  height: 60px;
+  background: url("../images/arrow.png");
   opacity: 1;
+  background-repeat: no-repeat;
   position: absolute;
-  top: 12px;
+  top: 10px;
   left: 91px;
-  border: 2px solid rgba(255,255,255,1);
 }
 .v207_965 {
   width: 33000px;
-  height: 15000px;
+  height: 170px;
   background: url("../images/v207_965.png");
   background-repeat: no-repeat;
   background-position: center center;
@@ -387,7 +387,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 550px;
-  left: 100px;
+  left: 120px;
   overflow: hidden;
 }
 .v117_12 {
@@ -523,14 +523,14 @@ body {
   text-align: center;
 }
 .v117_91 {
-  width: 11px;
-  height: 11px;
-  background: url("../images/v117_91.png");
+  width: 60px;
+  height: 60px;
+  background: url("../images/arrow.png");
+  background-repeat:no-repeat;
   opacity: 1;
   position: absolute;
-  top: 12px;
+  top: 10px;
   left: 91px;
-  border: 2px solid rgba(255,255,255,1);
 }
 .v192_127 {
   width: 131px;
@@ -585,31 +585,31 @@ body {
   text-align: center;
 }
 .v122_138 {
-  width: 11px;
-  height: 11px;
-  background: url("../images/v122_138.png");
+  width: 60px;
+  height: 60px;
+  background: url("../images/arrow.png");
   opacity: 1;
+  background-repeat: no-repeat;
   position: absolute;
-  top: 12px;
+  top: 10px;
   left: 91px;
-  border: 2px solid rgba(255,255,255,1);
 }
 .v207_968 {
-  width: 331px;
-  height: 157px;
+  width: 3310px;
+  height: 170px;
   background: url("../images/v207_968.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 950px;
-  left: 41px;
+  top: 1100px;
+  left: 130px;
   overflow: hidden;
 }
 .v117_14 {
-  width: 150px;
-  height: 110px;
+  width: 1500px;
+  height: 1100px;
   background: url("../images/v117_14.png");
   background-repeat: no-repeat;
   background-position: center center;
@@ -621,8 +621,8 @@ body {
   overflow: hidden;
 }
 .v41_66 {
-  width: 150px;
-  height: 110px;
+  width: 310px;
+  height: 160px;
   background: rgba(0,0,0,0.5);
   opacity: 1;
   position: absolute;
@@ -638,17 +638,18 @@ body {
   width: 121px;
   color: rgba(255,255,255,1);
   position: absolute;
-  top: 44px;
-  left: 15px;
+  top: 50px;
+  left: 25px;
   font-family: Poppins;
   font-weight: Bold;
-  font-size: 16px;
+  font-size: 25px;
   opacity: 1;
+  left: 50px;
   text-align: justified;
 }
 .v117_15 {
-  width: 150px;
-  height: 109px;
+  width: 1500px;
+  height: 1090px;
   background: url("../images/v117_15.png");
   background-repeat: no-repeat;
   background-position: center center;
@@ -656,12 +657,12 @@ body {
   opacity: 1;
   position: absolute;
   top: 1px;
-  left: 180px;
+  left: 420px;
   overflow: hidden;
 }
 .v41_67 {
-  width: 150px;
-  height: 109px;
+  width: 300px;
+  height: 160px;
   background: rgba(0,0,0,0.5);
   opacity: 1;
   position: absolute;
@@ -677,12 +678,13 @@ body {
   width: 116px;
   color: rgba(255,255,255,1);
   position: absolute;
-  top: 43px;
+  top: 50px;
   left: 17px;
   font-family: Poppins;
   font-weight: Bold;
-  font-size: 16px;
+  font-size: 25px;
   opacity: 1;
+  left: 60px;
   text-align: center;
 }
 .v192_134 {
@@ -694,8 +696,8 @@ body {
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 124px;
-  left: 7px;
+  top: 120px;
+  left: 70px;
   overflow: hidden;
 }
 .v122_155 {
@@ -738,14 +740,14 @@ body {
   text-align: center;
 }
 .v122_158 {
-  width: 11px;
-  height: 11px;
-  background: url("../images/v122_158.png");
+  width: 60px;
+  height: 60px;
+  background: url("../images/arrow.png");
   opacity: 1;
+  background-repeat: no-repeat;
   position: absolute;
-  top: 12px;
+  top: 10px;
   left: 91px;
-  border: 2px solid rgba(255,255,255,1);
 }
 .v192_133 {
   width: 131px;
@@ -756,8 +758,8 @@ body {
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 126px;
-  left: 200px;
+  top: 120px;
+  left: 500px;
   overflow: hidden;
 }
 .v122_160 {
@@ -787,31 +789,31 @@ body {
   text-align: center;
 }
 .v122_162 {
-  width: 11px;
-  height: 10px;
-  background: url("../images/v122_162.png");
+  width: 60px;
+  height: 60px;
+  background: url("../images/arrow.png");
   opacity: 1;
+  background-repeat: no-repeat;
   position: absolute;
-  top: 10px;
+  top: 9px;
   left: 91px;
-  border: 2px solid rgba(255,255,255,1);
 }
 .v207_967 {
-  width: 330px;
-  height: 156px;
+  width: 3300px;
+  height: 170px;
   background: url("../images/v207_967.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 760px;
-  left: 50px;
+  top: 910px;
+  left: 130px;
   overflow: hidden;
 }
 .v117_9 {
-  width: 150px;
-  height: 110px;
+  width: 1500px;
+  height: 1100px;
   background: url("../images/v117_9.png");
   background-repeat: no-repeat;
   background-position: center center;
@@ -823,8 +825,8 @@ body {
   overflow: hidden;
 }
 .v41_61 {
-  width: 150px;
-  height: 110px;
+  width: 290px;
+  height: 170px;
   background: rgba(0,0,0,0.5);
   opacity: 1;
   position: absolute;
@@ -837,20 +839,21 @@ body {
   overflow: hidden;
 }
 .v41_64 {
-  width: 74px;
+  width: 150px;
   color: rgba(255,255,255,1);
   position: absolute;
-  top: 44px;
-  left: 38px;
+  top: 60px;
+  left: 100px;
   font-family: Poppins;
   font-weight: Bold;
-  font-size: 16px;
+  font-size: 25px;
   opacity: 1;
+  left: 100px;
   text-align: justified;
 }
 .v117_13 {
-  width: 150px;
-  height: 109px;
+  width: 1500px;
+  height: 1090px;
   background: url("../images/v117_13.png");
   background-repeat: no-repeat;
   background-position: center center;
@@ -858,12 +861,12 @@ body {
   opacity: 1;
   position: absolute;
   top: 1px;
-  left: 180px;
+  left: 420px;
   overflow: hidden;
 }
 .v41_62 {
-  width: 150px;
-  height: 109px;
+  width: 290px;
+  height: 170px;
   background: rgba(0,0,0,0.5);
   opacity: 1;
   position: absolute;
@@ -879,12 +882,13 @@ body {
   width: 72px;
   color: rgba(255,255,255,1);
   position: absolute;
-  top: 43px;
+  top: 60px;
   left: 39px;
   font-family: Poppins;
   font-weight: Bold;
-  font-size: 16px;
+  font-size: 25px;
   opacity: 1;
+  left: 90px;
   text-align: center;
 }
 .v192_131 {
@@ -897,7 +901,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 123px;
-  left: 4px;
+  left: 80px;
   overflow: hidden;
 }
 .v122_147 {
@@ -940,14 +944,14 @@ body {
   text-align: center;
 }
 .v122_150 {
-  width: 11px;
-  height: 11px;
-  background: url("../images/v122_150.png");
+  width: 60px;
+  height: 60px;
+  background: url("../images/arrow.png");
+  background-repeat: no-repeat;
   opacity: 1;
   position: absolute;
-  top: 12px;
+  top: 10px;
   left: 91px;
-  border: 2px solid rgba(255,255,255,1);
 }
 .v192_132 {
   width: 131px;
@@ -959,7 +963,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 122px;
-  left: 188px;
+  left: 500px;
   overflow: hidden;
 }
 .v122_152 {
@@ -989,24 +993,24 @@ body {
   text-align: center;
 }
 .v122_154 {
-  width: 11px;
-  height: 10px;
-  background: url("../images/v122_154.png");
+  width: 60px;
+  height: 60px;
+  background: url("../images/arrow.png");
+  background-repeat: no-repeat;
   opacity: 1;
   position: absolute;
   top: 10px;
   left: 91px;
-  border: 2px solid rgba(255,255,255,1);
 }
 .v126_48 {
-  width: 176px;
+  width: 800px;
   color: rgba(255,255,255,1);
   position: absolute;
   top: 1711px;
-  left: 124px;
+  left: 50px;
   font-family: Saira Condensed;
   font-weight: Bold;
-  font-size: 32px;
+  font-size: 45px;
   opacity: 1;
   text-align: center;
 }
@@ -1016,18 +1020,18 @@ body {
   background: rgba(217,217,217,1);
   opacity: 1;
   position: absolute;
-  top: 1173px;
-  left: 25px;
+  top: 1300px;
+  left: 40px;
   border-radius: 50%;
 }
 .v122_163 {
-  width: 330px;
+  width: 800px;
   height: 9px;
   background: rgba(217,217,217,1);
   opacity: 1;
   position: absolute;
-  top: 1173px;
-  left: 50px;
+  top: 1300px;
+  left: 80px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -1040,8 +1044,8 @@ body {
   background: rgba(217,217,217,1);
   opacity: 1;
   position: absolute;
-  top: 1173px;
-  left: 5px;
+  top: 1300px;
+  left: 900px;
   border-radius: 50%;
 }
 .v126_17 {
@@ -1050,18 +1054,18 @@ body {
   background: rgba(217,217,217,1);
   opacity: 1;
   position: absolute;
-  top: 1600px;
-  left: 25px;
+  top: 1670px;
+  left: 900px;
   border-radius: 50%;
 }
 .v126_18 {
-  width: 330px;
+  width: 800px;
   height: 9px;
   background: rgba(217,217,217,1);
   opacity: 1;
   position: absolute;
-  top: 1600px;
-  left: 50px;
+  top: 1670px;
+  left: 80px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -1074,12 +1078,12 @@ body {
   background: rgba(217,217,217,1);
   opacity: 1;
   position: absolute;
-  top: 1600px;
-  left: 5px;
+  top: 1670px;
+  left: 40px;
   border-radius: 50%;
 }
 .v207_977 {
-  width: 329px;
+  width: 3290px;
   height: 31px;
   background: url("../images/v207_977.png");
   background-repeat: no-repeat;
@@ -1087,8 +1091,8 @@ body {
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 1265px;
-  left: 50px;
+  top: 1400px;
+  left: 120px;
   overflow: hidden;
 }
 .v122_173 {
@@ -1098,7 +1102,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 0px;
-  left: 198px;
+  left: 550px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
@@ -1110,7 +1114,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 9px;
-  left: 210px;
+  left: 560px;
   font-family: Poppins;
   font-weight: SemiBold;
   font-size: 11px;
@@ -1130,7 +1134,7 @@ body {
   text-align: justified;
 }
 .v207_976 {
-  width: 329px;
+  width: 3290px;
   height: 31px;
   background: url("../images/v207_976.png");
   background-repeat: no-repeat;
@@ -1138,8 +1142,8 @@ body {
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 1323px;
-  left: 50px;
+  top: 1450px;
+  left: 120px;
   overflow: hidden;
 }
 .v126_12 {
@@ -1149,7 +1153,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 0px;
-  left: 198px;
+  left: 550px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
@@ -1161,7 +1165,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 9px;
-  left: 213px;
+  left: 560px;
   font-family: Poppins;
   font-weight: SemiBold;
   font-size: 11px;
@@ -1181,7 +1185,7 @@ body {
   text-align: justified;
 }
 .v207_975 {
-  width: 329px;
+  width: 3290px;
   height: 31px;
   background: url("../images/v207_975.png");
   background-repeat: no-repeat;
@@ -1189,8 +1193,8 @@ body {
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 1385px;
-  left: 50px;
+  top: 1550px;
+  left: 120px;
   overflow: hidden;
 }
 .v126_21 {
@@ -1200,7 +1204,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 0px;
-  left: 198px;
+  left: 550px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
@@ -1212,7 +1216,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 9px;
-  left: 213px;
+  left: 560px;
   font-family: Poppins;
   font-weight: SemiBold;
   font-size: 11px;
@@ -1232,7 +1236,7 @@ body {
   text-align: justified;
 }
 .v207_974 {
-  width: 329px;
+  width: 3290px;
   height: 31px;
   background: url("../images/v207_974.png");
   background-repeat: no-repeat;
@@ -1240,8 +1244,8 @@ body {
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 1447px;
-  left: 50px;
+  top: 1600px;
+  left: 120px;
   overflow: hidden;
 }
 .v126_26 {
@@ -1251,7 +1255,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 0px;
-  left: 198px;
+  left: 550px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
@@ -1263,7 +1267,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 9px;
-  left: 213px;
+  left: 560px;
   font-family: Poppins;
   font-weight: SemiBold;
   font-size: 11px;
@@ -1286,11 +1290,11 @@ body {
   width: 81px;
   color: rgba(255,255,255,1);
   position: absolute;
-  top: 1228px;
-  left: 59px;
+  top: 1320px;
+  left: 400px;
   font-family: Saira Condensed;
   font-weight: Bold;
-  font-size: 32px;
+  font-size: 50px;
   opacity: 1;
   text-align: center;
 }
@@ -1309,7 +1313,7 @@ body {
   overflow: hidden;
 }
 .v207_978 {
-  width: 329px;
+  width: 3290px;
   height: 31px;
   background: url("../images/v207_978.png");
   background-repeat: no-repeat;
@@ -1317,8 +1321,8 @@ body {
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 1509px;
-  left: 50px;
+  top: 1500px;
+  left: 120px;
   overflow: hidden;
 }
 .v126_31 {
@@ -1328,7 +1332,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 0px;
-  left: 198px;
+  left: 550px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
@@ -1340,7 +1344,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 9px;
-  left: 213px;
+  left: 560px;
   font-family: Poppins;
   font-weight: SemiBold;
   font-size: 11px;
@@ -1360,18 +1364,18 @@ body {
   text-align: justified;
 }
 .v192_961 {
-  width: 14px;
-  height: 13px;
-  background: url("../images/v192_961.png");
+  width: 60px;
+  height: 60px;
+  background: url("../images/arrow.png");
+  background-repeat: no-repeat;
   opacity: 1;
   position: absolute;
-  top: 9px;
-  left: 288px;
-  border: 2px solid rgba(255,255,255,1);
+  top: 7px;
+  left: 640px;
 }
 .v207_971 {
-  width: 430px;
-  height: 199px;
+  width: 1000px;
+  height: 400px;
   background: url("../images/v207_971.png");
   background-repeat: no-repeat;
   background-position: center center;
@@ -1383,8 +1387,8 @@ body {
   overflow: hidden;
 }
 .v126_47 {
-  width: 430px;
-  height: 199px;
+  width: 1000px;
+  height: 300px;
   background: rgba(0,0,0,1);
   opacity: 1;
   position: absolute;
@@ -1393,17 +1397,16 @@ body {
   overflow: hidden;
 }
 .v126_49 {
-  width: 115px;
-  height: 39px;
+  width: 300px;
+  height: 101px;
   background: url("../images/v126_49.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  opacity: 0.8999999761581421;
+  opacity: 0.9;
   position: absolute;
-  top: 29px;
-  left: 50px;
-  overflow: hidden;
+  top: 70px;
+  left: 70px;
 }
 .v126_50 {
   width: 66px;
@@ -1576,15 +1579,15 @@ body {
   border: 2px solid rgba(255,255,255,1);
 }
 .v126_67 {
-  width: 160px;
-  height: 9px;
+  width: 300px;
+  height: 90px;
   background: url("../images/v126_67.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 73px;
+  top: 200px;
   left: 69px;
   overflow: hidden;
 }
@@ -1596,7 +1599,7 @@ body {
   left: 0px;
   font-family: Readex Pro;
   font-weight: Regular;
-  font-size: 8px;
+  font-size: 20px;
   opacity: 1;
   text-align: left;
 }
@@ -1664,27 +1667,27 @@ body {
   overflow: hidden;
 }
 .v136_71 {
-  width: 66px;
-  height: 30px;
+  width: 230px;
+  height: 90px;
   background: url("../images/v136_71.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 29px;
-  left: 314px;
+  top: 70px;
+  left: 600px;
   overflow: hidden;
 }
 .v136_72 {
   width: 62px;
   color: rgba(255,255,255,1);
   position: absolute;
-  top: 62px;
-  left: 318px;
+  top: 160px;
+  left: 635px;
   font-family: Saira Condensed;
   font-weight: Medium;
-  font-size: 11px;
+  font-size: 30px;
   opacity: 1;
   text-align: justified;
 }
